# littleB

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt
app/src/proto/: example_service.proto
app/src/services/: example_async_service.cpp  example_async_service.h
cmake/: cmake_debug.cmake  compile_proto.cmake  proto_get_canonical_path.py
docker/: Dockerfile
docker/littleb-ubuntu-build-base/: Dockerfile
docker/littleb-ubuntu-build-env/: Dockerfile
docker/ubuntu-build/: Dockerfile
example_server/: CMakeLists.txt  minigame_sever_main.cpp  server_main.cpp  summerfun_main.cpp
example_server/service/: minigame_login_service.cpp  minigame_login_service.h
example_server/src/: main.cpp
example_server/test/: folly.cpp  redis_client_test.cpp  service_login_test.cpp
lib/: CMakeLists.txt  command_distributor.cpp  command_distributor.h  command_manager.cpp  command_manager.h  command_register.cpp  command_register.h  common_def.h  example_login.proto  game_service.cpp  game_service.h  pb_reflection_manager.cpp  register_helper.h  role_info.cpp  role_info.h  service_interface.h  sync_redis_wrapper.cpp  sync_redis_wrapper.h
lib/cmake/: littleb-config.cmake.in
lib/data_manager/: command_manager.h  roleinfo_manager.cpp  roleinfo_manager.h
lib/handlers/: CmdMessageSerializeHandler.cpp  CmdMessageSerializeHandler.h  RpcMsgSerializeHandler.h  cmd_message_serialize_handler.cpp  cmd_message_serialize_handler.h  command_distributor.cpp  command_distributor.h  opcode_inject_handler.cpp  opcode_inject_handler.h  role_inject_handler.cpp  role_inject_handler.h
lib/include/: example_lib.h  service_interface.cpp  service_interface.h
lib/proto/: role.proto
lib/src/: example_lib.cpp
lib/test/: CMakeLists.txt  cmd_register_test.cpp  log_test.cpp
lib/test/proto/: example_service.proto
lib/test/services/: example_async_service.cpp  example_async_service.h  example_sync_service.cpp  example_sync_service.h
libsrc/: CMakeLists.txt  common_def.h  register_helper.h  sync_redis_wrapper.h
libsrc/data_manager/: command_manager.cpp  pb_reflection_manager.h  roleinfo_manager.cpp  roleinfo_manager.h
libsrc/handlers/: LengthFieldBasedFrameDecoder.cpp  LengthFieldBasedFrameDecoder.h  LengthFieldPrepender.cpp  LengthFieldPrepender.h  cmd_message_serialize_handler.cpp  cmd_message_serialize_handler.h  command_dispatcher.cpp  command_dispatcher.h  opcode_inject_handler.cpp  role_inject_handler.cpp  role_inject_handler.h
libsrc/include/: example_include.h
libsrc/login_service/: minigame_login_service.cpp  minigame_login_service.h  minigame_register_service.cpp  minigame_register_service.h
libsrc/proto/: cmd_id.proto  login.proto  register.proto  role.proto
libsrc/test/: CMakeLists.txt  cmd_register_test.cpp  example_test.cpp  minigame_basic_test.cpp
libsrc/test/services/: example_sync_service.cpp
minigame_server/: CMakeLists.txt  minigame_sever_main.cpp
minigame_server/data_manager/: task_data_manager.h
minigame_server/proto/: erase_role.proto  task_progress.proto
minigame_server/service/: erase_role_service.cpp  erase_role_service.h  task_query_service.cpp  task_query_service.h  task_update_service.cpp  task_update_service.h
minigame_server/test/: redis_client_test.cpp
minigame_sever/: CMakeLists.txt  minigame_sever_main.cpp
minigame_sever/data_manager/: task_data_manager.cpp  task_data_manager.h
minigame_sever/proto/: task_db.proto  task_progress.proto
minigame_sever/service/: task_progress_service.cpp  task_progress_service.h  task_query_service.cpp  task_query_service.h  task_update_service.cpp  task_update_service.h
minigame_sever/test/: redis_client_test.cpp
scripts/: install_fizz.sh  install_folly.sh  install_wangle.sh  ubuntu_setup.sh
server/: CMakeLists.txt
server/src/: main.cpp
server/src/services/: example_async_service.h
server/test/: redis_client_test.cpp
