cmake_minimum_required(VERSION 3.10)
project(littleB)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_VERBOSE_MAKEFILE ON)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(cmake_debug)
include(compile_proto)
find_package (Threads REQUIRED)
find_package(openssl REQUIRED)
find_package(gflags REQUIRED) # TODO folly 使用了系统的 gflags, 而我使用了 gflags 的源码.   如何解决这种三方库和自己同时使用一个库的问题？
find_package(protobuf REQUIRED)
find_package(boost REQUIRED)
find_package(folly REQUIRED)
find_package(wangle REQUIRED)
find_package(fizz REQUIRED)
add_subdirectory(third_party EXCLUDE_FROM_ALL)
add_subdirectory(lib)
add_subdirectory(example_server)

enable_testing()